--- a/aspnet-core/src/ShopEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/ShopEcommerce.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ShopEcommerce;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.;Database=ShopEcommerce;User Id=sa;Password=sa;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
