--- a/aspnet-core/src/ShopEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/ShopEcommerce.DbMigrator/appsettings.json
@@ -7,20 +7,12 @@
       "ShopEcommerce_Web": {
         "ClientId": "ShopEcommerce_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44360"
+        "RootUrl": "https://localhost:5002"
       },
-      "ShopEcommerce_App": {
-        "ClientId": "ShopEcommerce_App",
-        "RootUrl": "http://localhost:4200"
-      },
-      "ShopEcommerce_BlazorServerTiered": {
-        "ClientId": "ShopEcommerce_BlazorServerTiered",
+      "ShopEcommerce_Admin": {
+        "ClientId": "ShopEcommerce_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44384"
-      },
-      "ShopEcommerce_Swagger": {
-        "ClientId": "ShopEcommerce_Swagger",
-        "RootUrl": "https://localhost:44322"
+        "RootUrl": "http://localhost:5001"
       }
     }
   }
